# synth-core

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: ansi_keyboard.rs  audio.rs  engine.rs  lib.rs  midi_keyboard.rs  model.rs  module.rs  modules.rs  plan.rs  plan_engine.rs  processing.rs  registry.rs  wav.rs
src/modules/: adsr_envelope.rs  ansi_keyboard.rs  audio_output.rs  const_generator.rs  constant.rs  icons.rs  midi_keyboard.rs  mix.rs  mod.rs  mul.rs  range.rs  sawtooth_generator.rs  sine.rs  sine_generator.rs  square_generator.rs
synth-macros/: Cargo.toml
synth-macros/src/: lib.rs
