[package]
name = "synth-macros"
version = "0.1.0"
edition = "2021"
description = "Derive macros for synth-core (module params synthesized from a typed struct)."
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
